# studiomind

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  VISION.md  autorender-stage2.md  phase-2-effects.md  sample-fingerprints.md  test-project-recipe.md  vertical-slice-test.md
scripts/: batch_enumerate_plugins.py  device_StudioMind.py  device_probe.py  enumerate_plugin_params.py  install-midi-services.ps1  install-shortcut.ps1  install_windows.ps1  rescue_orphan_stems.py  setup-autorender.ps1
src/studiomind/: __init__.py  __main__.py  cli.py  config.py  decisions.py  fl_detect.py  protocol.py  user_prefs.py  workspace.py
src/studiomind/agent/: __init__.py  loop.py  prompt.py  tools.py
src/studiomind/analyzer/: __init__.py  spectral.py
src/studiomind/bridge/: __init__.py  commands.py  midi_client.py
src/studiomind/plugins/: __init__.py  fabfilter_proq3.py  fruity_compressor_params.json
src/studiomind/render/: __init__.py  pipeline.py
src/studiomind/web/: __init__.py  app.py
src/studiomind/web/static/: index.html
tests/: test_compaction_boundary.py  test_decisions.py  test_fl_detect.py  test_protocol.py  test_spectral.py  test_user_prefs.py  test_workspace.py  test_workspace_session.py
