[project]
name = "studiomind"
version = "0.1.0"
description = "Agentic AI producer for FL Studio"
requires-python = ">=3.11"
dependencies = [
    "python-rtmidi>=1.5.8",
    "numpy>=1.26",
    "scipy>=1.12",
    "soundfile>=0.12",
    "pyloudnorm>=0.1",
    "anthropic>=0.40",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "websockets>=14.0",
]

[project.optional-dependencies]
render = ["pywinauto>=0.6.8"]  # Windows auto-render via keyboard automation
dev = ["pytest>=8", "ruff>=0.8"]

[project.scripts]
studiomind = "studiomind.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/studiomind"]

[tool.ruff]
target-version = "py311"
line-length = 100
